--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li><a href="https://picsum.photos/id/123/200/300">Home</a></li>
+			<li><a href="https://picsum.photos/id/124/200/300">About us</a></li>
+			<li><a href="https://picsum.photos/id/125/200/300">Contact us</a></li>
+		</ul>
+	</nav>
+    <h1>3 random images</h1>
+	<image src="https://picsum.photos/id/123/200/300" alt="Random image"></image><br>
+	<image src="https://picsum.photos/id/124/200/300" alt="Random image"></image><br>
+	<image src="https://picsum.photos/id/125/200/300" alt="Random image"></image>
     <script type="text/javascript" src="./script.js">
 </script>
 
